--- a/reversing-tutorial/why-reverse.tex
+++ b/reversing-tutorial/why-reverse.tex
@@ -15,7 +15,6 @@ Let's start up our Kali Linux and write up our own code get a better idea. The L
 of the applications in your environment from the command line. For windows users, it is equivalent to the command
 prompt application (cmd). Access your terminal by searching ``Terminator'' in the Activities section of the toolbar
 }or\textbf{ selecting the red icon on the dash that looks like }
-%\sitgfx{width=0.4583in,height=0.4689in}{FINALWORKINGDOCFORMERLYPRECURSOR-img001.png}{fig:abc}{Test caption.}
-\includegraphics[width=0.4583in,height=0.4689in]{FINALWORKINGDOCFORMERLYPRECURSOR-img001.png}
+\includegraphics[height=0.2689in]{FINALWORKINGDOCFORMERLYPRECURSOR-img001.png}
  \textbf{. Here you should see a window open with your current user and location in the file system.\newline
 }
